--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,10 +1,12 @@
-$font-primary:'Roboto', sans-serif;
+$font-primary: 'Roboto', sans-serif;
 $font-weight-medium: 400;
 $font-weight-light: 300;
 
 $color-primary: #652ae6;
 $color-secondary: #1bfec0;
+$color-gray-light: #f9f9fb;
 $color-gray-dark: #242424;
 $color-error: #eb5757;
+$color-white: #ffffff;
 
 $breakpoint-desktop: 992px;
