--- a/src/components/stepIndicator/_stepIndicator.scss
+++ b/src/components/stepIndicator/_stepIndicator.scss
@@ -1,14 +1,53 @@
+@import '../../scss/variables';
+
 .step-indicator {
-    position: absolute;
-    right: 0;
+    display: none;
 
-    transform: translateX(100%);
-    &__element {
-    }
+    @media only screen and (min-width: $breakpoint-desktop) {
+        position: absolute;
+        right: 0;
+        top: 110px;
+        height: min-content;
 
-    &__bar {
-    }
+        transform: translate(100%);
+        display: flex;
+        flex-direction: column;
 
-    &__title {
+        &__element {
+            height: 34px;
+
+            &:not(:last-child) {
+                margin-bottom: 42px;
+            }
+        }
+
+        span {
+            display: block;
+            font-size: 11px;
+        }
+
+        &__bar {
+            background-color: $color-gray-light;
+            opacity: 0.25;
+            width: 25px;
+            height: 2px;
+
+            &.active {
+                background-color: $color-secondary;
+                opacity: 1;
+            }
+        }
+
+        &__step-number {
+            margin-top: 8px;
+            margin-left: 8px;
+            color: $color-white;
+        }
+
+        &__title {
+            margin-top: 4px;
+            margin-left: 8px;
+            color: $color-white;
+        }
     }
 }
