--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 $font-primary: 'Roboto', sans-serif;
-$font-weight-medium: 400;
 $font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-medium: 500;
 
 $color-primary: #652ae6;
 $color-secondary: #1bfec0;
