--- a/src/views/mainView/_mainView.scss
+++ b/src/views/mainView/_mainView.scss
@@ -1,11 +1,12 @@
 @import '../../scss/variables';
 
 .main-view {
-    height: 100vh;
+    height: min-content;
+    min-height: 100vh;
     width: 100vw;
+    padding-bottom: 60px;
 
     background-image: url('/img/bg-shape.svg');
     background-repeat: no-repeat;
-
     background-color: $color-gray-dark;
 }
