Add form with styling | Add reusable input components

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -2,9 +2,8 @@
 
 .button {
     cursor: pointer;
-    &--default {
-        // backgorund:
-    }
+    background-color: transparent;
+
     &__container > * {
         transition: transform 0.1s ease-in-out;
     }
