--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,5 +9,8 @@ $color-gray-light: #f9f9fb;
 $color-gray-dark: #242424;
 $color-error: #eb5757;
 $color-white: #ffffff;
+$color-inactive-input: #dadaed;
+$color-off-black: #202020;
 
 $breakpoint-desktop: 992px;
+$breakpoint-md: 768px;
