--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -85,6 +85,7 @@ video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -98,17 +99,21 @@ hgroup,
 menu,
 nav,
 section {
+    box-sizing: border-box;
     display: block;
 }
 body {
+    box-sizing: border-box;
     line-height: 1;
 }
 ol,
 ul {
+    box-sizing: border-box;
     list-style: none;
 }
 blockquote,
 q {
+    box-sizing: border-box;
     quotes: none;
 }
 blockquote:before,
@@ -119,23 +124,63 @@ q:after {
     content: none;
 }
 table {
+    box-sizing: border-box;
     border-collapse: collapse;
     border-spacing: 0;
 }
 
 a {
+    box-sizing: border-box;
     text-decoration: none;
 }
 
 input,
-textarea {
+textarea,
+select {
+    box-sizing: border-box;
     -webkit-appearance: none;
     display: block;
     width: 100%;
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
 }
 
 button {
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
     border: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+    -moz-appearance: textfield;
+}
+
+select {
+    -moz-appearance: none; /* Firefox */
+    -webkit-appearance: none; /* Safari and Chrome */
+    appearance: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    -webkit-text-fill-color: inherit;
+    transition: background-color 5000s ease-in-out 0s;
 }
