--- a/src/components/createAccountForm/_createAccountForm.scss
+++ b/src/components/createAccountForm/_createAccountForm.scss
@@ -3,7 +3,7 @@
 .create-account-form {
     & > * {
         &:not(:last-child) {
-            margin-bottom: 25px;
+            margin-bottom: 2.5rem;
         }
     }
 }
