--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,5 +12,5 @@ $color-white: #ffffff;
 $color-inactive-input: #dadaed;
 $color-off-black: #202020;
 
-$breakpoint-desktop: 992px;
-$breakpoint-md: 768px;
+$breakpoint-desktop: 62em;
+$breakpoint-md: 48em;
