--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -27,11 +27,11 @@
 }
 
 .step-button {
-    height: 50px;
-    width: 237px;
+    height: 5rem;
+    width: 23.7rem;
     display: flex;
     background: linear-gradient(90deg, #8658eb -0.42%, $color-primary 100.42%);
-    box-shadow: 0px 20px 25px rgba(32, 31, 54, 0.15);
+    box-shadow: 0px 2rem 2rem rgba(32, 31, 54, 0.15);
 
     &__left {
         flex: 1;
@@ -51,11 +51,11 @@
         justify-content: center;
         align-items: center;
         height: 100%;
-        width: 50px;
+        width: 5rem;
         background-color: #7841f4;
 
         img {
-            width: 20px;
+            width: 2rem;
         }
     }
 }
