--- a/src/components/createAccount/_createAccount.scss
+++ b/src/components/createAccount/_createAccount.scss
@@ -11,28 +11,28 @@
         position: relative;
         background-color: white;
         width: 70vw;
-        min-width: 290px;
-        max-width: 728px;
-        min-height: 500px;
+        min-width: 29rem;
+        max-width: 72.8rem;
+        min-height: 50rem;
         height: 80vh;
 
         @media only screen and (min-width: $breakpoint-desktop) {
-            width: 728px;
-            height: 550px;
+            width: 72.8rem;
+            height: 55rem;
         }
     }
 
     &__title {
         font-weight: $font-weight-light;
-        margin-top: 25px;
-        margin-bottom: 28px;
-        font-size: 36px;
+        margin-top: 2.5rem;
+        margin-bottom: 2.8rem;
+        font-size: 3.6rem;
         color: white;
 
         @media only screen and (min-width: $breakpoint-desktop) {
-            font-size: 48px;
-            margin-top: 56px;
-            margin-bottom: 48px;
+            font-size: 4.8rem;
+            margin-top: 5.6rem;
+            margin-bottom: 4.8rem;
         }
     }
 }
