--- a/src/components/inputs/_inputs.scss
+++ b/src/components/inputs/_inputs.scss
@@ -2,18 +2,18 @@
 
 input,
 select {
-    font-size: 16px;
-    padding-left: 15px;
-    height: 50px;
+    font-size: 1.6rem;
+    padding-left: 1.5rem;
+    height: 5.0rem;
     letter-spacing: 0.3px;
 }
 
 .label {
     display: block;
     color: #333333;
-    font-size: 11px;
-    margin-bottom: 15px;
-    margin-left: 15px;
+    font-size: 1.1rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
 }
 
 .select-input {
@@ -24,11 +24,11 @@ select {
     cursor: pointer;
     background-position-y: 50%;
     background-position-x: calc(100% - 3px);
-    background-size: 8px;
+    background-size: .8rem;
 
     @media only screen and (min-width: $breakpoint-desktop) {
         background-size: unset;
-        background-position-x: calc(100% - 15px);
+        background-position-x: calc(100% - 1.5rem);
     }
 }
 
@@ -40,17 +40,17 @@ select {
         display: flex;
         width: 100%;
         justify-content: space-between;
-        height: 50px;
+        height: 5rem;
 
         #{ $self } {
             &__day {
-                min-width: 50px !important;
-                width: 50px;
+                min-width: 5rem !important;
+                width: 5rem;
             }
 
             &__month {
-                min-width: 50px !important;
-                width: 50px;
+                min-width: 5rem !important;
+                width: 5rem;
 
                 @media only screen and (min-width: $breakpoint-desktop) {
                     min-width: unset;
@@ -62,7 +62,7 @@ select {
         input,
         select {
             border: 2px solid $color-inactive-input;
-            min-width: 100px;
+            min-width: 10rem;
             height: 100%;
             box-sizing: border-box;
 
@@ -71,15 +71,15 @@ select {
             }
         }
         span {
-            margin: auto 7.5px auto 7.5px;
-            min-width: 10px;
-            width: 10px;
+            margin: auto 0.75rem auto 0.75rem;
+            min-width: 1rem;
+            width: 1rem;
             height: 2px;
             background-color: $color-inactive-input;
         }
 
         label {
-            width: 100px;
+            width: 10rem;
         }
     }
 }
@@ -125,26 +125,26 @@ select {
         justify-content: flex-start;
         align-items: center;
         border: 2px solid $color-inactive-input;
-        font-size: 16px;
-        height: 50px;
-        width: 50px;
+        font-size: 1.6rem;
+        height: 5rem;
+        width: 5rem;
 
         &:not(:last-of-type) {
-            margin-right: 25px;
+            margin-right: 2.5rem;
         }
 
         span {
-            font-size: 16px;
+            font-size: 1.6rem;
             color: #333333;
-            margin-left: 7px;
+            margin-left: .7rem;
         }
 
         &:after {
             content: '';
             box-sizing: border-box;
             position: absolute;
-            width: 17px;
-            height: 17px;
+            width: 1.7rem;
+            height: 1.7rem;
             right: 0;
             top: 50%;
             transform: translate(50%, -50%);
@@ -160,8 +160,8 @@ select {
         align-items: baseline;
     }
     &__prefix {
-        width: 115px;
-        margin-right: 20px;
+        width: 11.5rem;
+        margin-right: 2rem;
     }
 
     &__number {
@@ -177,7 +177,7 @@ select {
 
 .underlined-input {
     border-bottom: 2px solid $color-inactive-input;
-    height: 40px;
+    height: 4rem;
     &:focus {
         border-color: $color-primary;
     }
