--- a/src/views/mainView/_mainView.scss
+++ b/src/views/mainView/_mainView.scss
@@ -4,7 +4,7 @@
     height: min-content;
     min-height: 100vh;
     width: 100vw;
-    padding-bottom: 60px;
+    padding-bottom: 6rem;
 
     background-image: url('/img/bg-shape.svg');
     background-repeat: no-repeat;
