--- a/src/components/inputs/_inputs.scss
+++ b/src/components/inputs/_inputs.scss
@@ -4,7 +4,7 @@ input,
 select {
     font-size: 1.6rem;
     padding-left: 1.5rem;
-    height: 5.0rem;
+    height: 5rem;
     letter-spacing: 0.3px;
 }
 
@@ -24,7 +24,7 @@ select {
     cursor: pointer;
     background-position-y: 50%;
     background-position-x: calc(100% - 3px);
-    background-size: .8rem;
+    background-size: 0.8rem;
 
     @media only screen and (min-width: $breakpoint-desktop) {
         background-size: unset;
@@ -34,6 +34,7 @@ select {
 
 .date-input {
     $self: &;
+    position: relative;
     width: 100%;
 
     &__container {
@@ -85,6 +86,8 @@ select {
 }
 
 .radio-input {
+    position: relative;
+
     &__container {
         height: max-content;
         width: 100%;
@@ -136,7 +139,7 @@ select {
         span {
             font-size: 1.6rem;
             color: #333333;
-            margin-left: .7rem;
+            margin-left: 0.7rem;
         }
 
         &:after {
@@ -157,11 +160,19 @@ select {
 .phone-number-input {
     &__container {
         display: flex;
-        align-items: baseline;
+        align-items: flex-end;
+
+        & > * {
+            position: relative;
+        }
     }
     &__prefix {
-        width: 11.5rem;
+        width: 10.5rem;
         margin-right: 2rem;
+
+        input {
+            width: 100%;
+        }
     }
 
     &__number {
@@ -171,6 +182,7 @@ select {
 
 .text-input {
     display: flex;
+    position: relative;
     flex-direction: column;
     width: 100%;
 }
@@ -178,7 +190,29 @@ select {
 .underlined-input {
     border-bottom: 2px solid $color-inactive-input;
     height: 4rem;
+    position: relative;
+
     &:focus {
         border-color: $color-primary;
+    }
+
+    &.error {
+        border-color: $color-error;
+        color: $color-error;
+    }
+}
+
+.input-error {
+    position: absolute;
+    bottom: -0.5rem;
+    left: 1.5rem;
+    transform: translateY(100%);
+    color: $color-error;
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+
+    &.active {
+        transition: all 0.4s ease-in-out;
+        opacity: 1;
     }
 }
