--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -139,12 +139,19 @@ textarea,
 select {
     box-sizing: border-box;
     -webkit-appearance: none;
+    -moz-appearance: none;
     display: block;
     width: 100%;
     border: none;
     background: none;
     padding: 0;
     margin: 0;
+    border-radius: 0;
+    overflow: visible;
+}
+
+select:not(:-internal-list-box) {
+    overflow: visible !important;
 }
 
 button {
