--- a/src/components/inputs/_inputs.scss
+++ b/src/components/inputs/_inputs.scss
@@ -76,7 +76,8 @@ select {
             min-width: 1rem;
             width: 1rem;
             height: 2px;
-            background-color: $color-inactive-input;
+            background-color: #A2A2AF;
+            opacity: .25;
         }
 
         label {
@@ -184,8 +185,10 @@ select {
         width: 11.5rem;
         margin-right: 2rem;
 
-        input {
+        select {
             width: 100%;
+            background-position-x: calc(100% - 1.5rem);
+
         }
     }
 
