--- a/src/views/mainView/_mainView.scss
+++ b/src/views/mainView/_mainView.scss
@@ -1,6 +1,8 @@
 @import '../../scss/variables';
 
 .main-view {
+    display: flex;
+    justify-content: center;
     height: min-content;
     min-height: 100vh;
     width: 100vw;
